bluec-tests/tests/invalid/types_bool/call_bool_as_function.c
_Bool x(void);

int main(void) {
    _Bool x = 0;
    return x();
}